policies/fixtures/bad-cronjob.yaml
apiVersion: "batch/v1"
kind: "CronJob"
metadata:
  name: "bad-cronjob"
  namespace: "devsecops-reference"
spec:
  schedule: "0 0 * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            app: "sample-api"
        spec:
          automountServiceAccountToken: false
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            seccompProfile:
              type: "RuntimeDefault"
          containers:
            -
              name: "sample-api"
              image: "devsecops-reference:local"
              securityContext:
                allowPrivilegeEscalation: false
                readOnlyRootFilesystem: true
                capabilities:
                  drop:
                    - "ALL"
                runAsNonRoot: false
              resources:
                limits:
                  cpu: "250m"
                  memory: "128Mi"
          restartPolicy: "Never"
